# instrumentor

./: .gitignore  .gitmodules  LICENSE  Makefile  README.md  SoftboundCETS.md  instrumentor.cabal  llvm-setup.sh  package.yaml  runtime-setup.sh  stack.yaml
app/: Main.hs
runtime/SoftboundCETS/: CMakeLists.txt  softboundcets-dummy.c  softboundcets-interface.c  softboundcets-interface.h  softboundcets-internal.c  softboundcets-internal.h
runtimes/: .gitignore  CMakeLists.txt  Makefile
runtimes/SoftboundCETS/: CMakeLists.txt  Makefile  blacklist  softboundcets-common.c  softboundcets-dummy.c  softboundcets-init.c  softboundcets-interface.c  softboundcets-interface.h  softboundcets-internal.c  softboundcets-internal.h  softboundcets-wrappers.c
scripts/: build-llvm.sh  build-runtimes.sh
src/: CLI.hs  Instrumentor.hs  LLVMHSExtensions.hs  LLVMHelpers.hs  Lib.hs  SoftboundCETS.hs  SoftboundCETSDefinitions.hs  Utils.hs
test/: .gitignore  Makefile  test.c
test/bitcast-passthrough/: Makefile  test.c
test/double-free/: Makefile  test.c
test/global-free/: Makefile  test.c
test/global-out-of-bounds-post/: Makefile  test.c
test/global-select-global-local/: Makefile.hwasan  test.c
test/leak-stack-address/: Makefile  test.c
test/null-pointer-dereference/: Makefile  test.c
test/out-of-bounds-post/: Makefile  test.c
test/out-of-bounds-pre/: test.c
test/pointers-in-aggregates/: test.c
test/pointers-to-aggregates/: Makefile  test.c
test/safe-malloc-usage/: Makefile  test.c
test/select-passthrough/: Makefile  test.c
test/use-after-free/: Makefile  test.c
